fixed cta issue on mobile

--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -14,11 +14,11 @@
 
         p{
             @include mobile{
-                font-size: 5px;
+                font-size: 10px;
                 
             }
             @include iphone8{
-                font-size: 5px;
+                font-size: 10px;
                 
             }
 
@@ -26,11 +26,11 @@
 
         @include mobile{
             top: 70px;
-            left: 105px;
+            left: 128px;
         }
         @include iphone8{
             top: 70px;
-            left: 105px;
+            left: 128px;
         }
         
 
